Did some changes for error 404

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             ></a>
           </div>
         </div>
-        <button class="nav-3"><a href="/contact.html">Hire me</a></button>
+        <button class="nav-3"><a href="contact.html">Hire me</a></button>
       </div>
     </header>
 
