--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
             ></a>
           </div>
         </div>
-        <div class="nav-3"><a href="/contact.html">Hire me</a></div>
+        <div class="nav-3"><a href="contact.html">Hire me</a></div>
       </div>
     </header>
 
